Bug 452804 - Edit brush settings popup has wrong position
Summary: Edit brush settings popup has wrong position
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.0.5
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-20 17:29 UTC by sirdorius
Modified: 2026-02-03 16:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
full screen screenshot after popup open (612.25 KB, image/png)
2022-04-20 17:29 UTC, sirdorius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sirdorius 2022-04-20 17:29:15 UTC
Created attachment 148269 [details]
full screen screenshot after popup open

SUMMARY
I have an issue with Krita when using it on my Lenovo Yoga 9i in tablet mode on Win11. When clicking on the "Edit Brush Settings" button the popup opens too high and the close button is not visible on screen. This is very annoying when in tablet mode because I don't have the keyboard available to press ESC and I have to jump through hoops to close it.

This window should probably be more responsive to screen size as there is a lot unutilized screen space or at least it should be positioned low enough so the close button is visible. I guess this is mostly a bug in calculating the position on the screen with this particular screen setup.

My display settings are 3840x2160 at 300% scale.

STEPS TO REPRODUCE
1. Open Krita
2. Press Edit Brush Settings button in the top bar

OBSERVED RESULT
Popup screen is placed too high and Windows bar close button is not visible. Attached screenshot of the whole screen.

EXPECTED RESULT
The popup should be place lower so the close button is visible, or it should be responsive in height to adapt to the screen size if there is not enough space.

ADDITIONAL DETAILS
Krita

 Version: 5.0.5
 Installation type: installer / portable package
 Languages: en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.22000
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (Intel(R) Iris(R) Xe Graphics Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 
  supportsBufferMapping: true 
  supportsBufferInvalidation: false 
  Extensions: 
     "GL_EXT_texture_norm16" 
     "GL_OES_packed_depth_stencil" 
     "GL_EXT_disjoint_timer_query" 
     "GL_OES_vertex_array_object" 
     "GL_ANGLE_robust_client_memory" 
     "GL_CHROMIUM_color_buffer_float_rgba" 
     "GL_OES_mapbuffer" 
     "GL_KHR_debug" 
     "GL_NV_pixel_buffer_object" 
     "GL_ANGLE_texture_compression_dxt5" 
     "GL_CHROMIUM_color_buffer_float_rgb" 
     "GL_CHROMIUM_bind_uniform_location" 
     "GL_CHROMIUM_sync_query" 
     "GL_EXT_map_buffer_range" 
     "GL_EXT_sRGB" 
     "GL_ANGLE_texture_compression_dxt3" 
     "GL_EXT_texture_format_BGRA8888" 
     "GL_ANGLE_program_cache_control" 
     "GL_ANGLE_request_extension" 
     "GL_ANGLE_pack_reverse_row_order" 
     "GL_ANGLE_framebuffer_blit" 
     "GL_EXT_frag_depth" 
     "GL_EXT_unpack_subimage" 
     "GL_OES_EGL_image_external" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_NV_EGL_stream_consumer_external" 
     "GL_ANGLE_client_arrays" 
     "GL_CHROMIUM_bind_generates_resource" 
     "GL_EXT_color_buffer_half_float" 
     "GL_EXT_color_buffer_float" 
     "GL_OES_standard_derivatives" 
     "GL_ANGLE_instanced_arrays" 
     "GL_CHROMIUM_copy_compressed_texture" 
     "GL_EXT_read_format_bgra" 
     "GL_OES_rgb8_rgba8" 
     "" 
     "GL_OES_compressed_ETC1_RGB8_texture" 
     "GL_OES_texture_half_float_linear" 
     "GL_ANGLE_translated_shader_source" 
     "GL_ANGLE_depth_texture" 
     "GL_EXT_robustness" 
     "GL_ANGLE_texture_usage" 
     "GL_EXT_texture_rg" 
     "GL_OES_depth32" 
     "GL_NV_fence" 
     "GL_EXT_debug_marker" 
     "GL_OES_texture_float_linear" 
     "GL_EXT_occlusion_query_boolean" 
     "GL_OES_surfaceless_context" 
     "GL_ANGLE_lossy_etc_decode" 
     "GL_OES_EGL_image" 
     "GL_OES_EGL_image_external_essl3" 
     "GL_EXT_shader_texture_lod" 
     "GL_OES_texture_half_float" 
     "GL_OES_get_program_binary" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_OES_element_index_uint" 
     "GL_OES_texture_npot" 
     "GL_NV_pack_subimage" 
     "GL_EXT_blend_minmax" 
     "GL_CHROMIUM_copy_texture" 
     "GL_EXT_texture_compression_s3tc_srgb" 
     "GL_EXT_draw_buffers" 
     "GL_OES_texture_float" 
     "GL_ANGLE_framebuffer_multisample" 
     "GL_EXT_texture_storage" 
     "GL_ANGLE_multiview" 
     "GL_EXT_discard_framebuffer" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 16118 Mb
  Number of Cores: 8
  Swap Location: C:/Users/sirdo/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/sirdo/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 3
		Resolution in pixels: 1280x720
		Manufacturer: 
		Model: 
		Refresh Rate: 60

Current Settings

  Current Swap Location: C:/Users/sirdo/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: false


Current Settings

  Current Swap Location: C:/Users/sirdo/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: false


Current Settings

  Current Swap Location: C:/Users/sirdo/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: false


Current Settings

  Current Swap Location: C:/Users/sirdo/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 600
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: false



---------------------
================================================================================
SESSION: 20 Apr 2022 17:40:16 +0100. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 5.0.5, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 33324
-- -- -- -- -- -- -- --
20 Apr 2022 17:40:16 +0100: Style: fusion. Available styles: windowsvista, Windows, Fusion
20 Apr 2022 17:40:20 +0100: Database is up to date. Version: 0.0.15, created by Krita 5.0.0, at Fri Dec 24 11:14:54 2021
20 Apr 2022 17:40:23 +0100: Non-store package - creating updater
20 Apr 2022 17:40:26 +0100: Importing image/tiff to application/x-krita. Location: C:/Users/sirdo/Pictures/Drawings/Poolbeg towers.tif. Real location: C:/Users/sirdo/Pictures/Drawings/Poolbeg towers.tif. Batchmode: 1
20 Apr 2022 17:40:27 +0100: Loaded image from image/tiff. Size: 3841 * 2161 pixels, 8.33333 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2
20 Apr 2022 17:46:16 +0100: Created image "Unnamed", 3508 * 2480 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2
20 Apr 2022 17:56:16 +0100: Autosaving: C:/Users/sirdo/AppData/Local/Temp/.krita-33324-document_1-autosave.kra
20 Apr 2022 17:56:16 +0100: Converting from application/x-krita to application/x-krita. Location: C:/Users/sirdo/AppData/Local/Temp/.krita-33324-document_1-autosave.kra. Real location: C:/Users/sirdo/AppData/Local/Temp/.krita-33324-document_1-autosave.kra. Batchmode: 0. Configuration: none
20 Apr 2022 17:56:16 +0100: Completed saving C:/Users/sirdo/AppData/Local/Temp/.krita-33324-document_1-autosave.kra (mime: application/x-krita). Result: OK. Warning: . Size: 1019355

---------------------
Comment 1 Reinold Rojas 2024-11-14 02:20:57 UTC
I can confirm this is still an issue on latest Android 5.2.8. 

Reproduce steps
1. In android settings, increase UI scale (sometimes called "Screen zoom") to max
2. In Krita open brush settings (Observe top of brush settings popup is off screen)
Comment 2 Adam Blake 2025-10-25 06:31:25 UTC
Bump. I was about to report this issue for latest Android apk 5.2.13

Brush settings opens too high in landscape orientation on my Google Pixel Tablet (Android 16.) Switching to portrait orientation doesn't help as window remains too high and I have to exit Krita with a swipe in app switcher.

The brush settings window is essentially too large and needs a redesign, for Android anyways.
Comment 3 Dmitry Kazakov 2025-10-29 14:11:50 UTC
Git commit eb4d34a82ed01922c536c609f62f3a32cefaea97 by Dmitry Kazakov, on behalf of Pavel shlop.
Committed on 29/10/2025 at 14:11.
Pushed by dkazakov into branch 'master'.

Fix hidden brush editor titlebar (Windows + Android)

It hides behind top left screen corner upon first open
on Windows and Android

M  +4    -1    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/-/commit/eb4d34a82ed01922c536c609f62f3a32cefaea97
Comment 4 Dmitry Kazakov 2025-10-29 14:12:21 UTC
Git commit 8cf630e0a2e04d1f885b80733c6a91d63892273c by Dmitry Kazakov.
Committed on 29/10/2025 at 14:12.
Pushed by dkazakov into branch 'krita/5.2'.

Fix hidden brush editor titlebar (Windows + Android)

It hides behind top left screen corner upon first open
on Windows and Android


(cherry picked from commit eb4d34a82ed01922c536c609f62f3a32cefaea97)

7f14ea10 Fix brush editor titlebar position behind screen area
dd9ca3ed Return m_d->frame->raise()

Co-authored-by: Pavel shlop <shishlo360@gmail.com>

M  +4    -1    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/-/commit/8cf630e0a2e04d1f885b80733c6a91d63892273c
Comment 5 Bug Janitor Service 2026-02-01 12:05:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2629
Comment 6 Dmitry Kazakov 2026-02-03 13:31:19 UTC
Git commit cf270b027fedcd9372b99292259e94a8f5cd2bdd by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 03/02/2026 at 13:28.
Pushed by dkazakov into branch 'master'.

Size attached KisPopupButton popups properly

There was a fix that moved the sizing logic to a different place to fix
a disappearing titlebar for detached popups, but that broke the sizing
of attached popups. This makes the new logic conditional on the
tachedness instead.

M  +9    -4    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/-/commit/cf270b027fedcd9372b99292259e94a8f5cd2bdd
Comment 7 Dmitry Kazakov 2026-02-03 16:15:16 UTC
Git commit d28f1114d4075ecec1e874af7cf054c98bd33376 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 03/02/2026 at 16:06.
Pushed by dkazakov into branch 'krita/6.0'.

Size attached KisPopupButton popups properly

There was a fix that moved the sizing logic to a different place to fix
a disappearing titlebar for detached popups, but that broke the sizing
of attached popups. This makes the new logic conditional on the
tachedness instead.

M  +9    -4    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/-/commit/d28f1114d4075ecec1e874af7cf054c98bd33376