Fix hidden brush editor titlebar (Windows + Android)

It hides behind top left screen corner upon first open
on Windows and Android

BUG:452804


(cherry picked from commit eb4d34a82ed01922c536c609f62f3a32cefaea97)

7f14ea10 Fix brush editor titlebar position behind screen area
dd9ca3ed Return m_d->frame->raise()

Co-authored-by: Pavel shlop <shishlo360@gmail.com>